--- a/AnimalSlotsGame/GoogleService-Info.plist
+++ b/AnimalSlotsGame/GoogleService-Info.plist
@@ -3,32 +3,32 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>473353547063-t3m9rc8166cut0ddtk039gov9glc7i6a.apps.googleusercontent.com</string>
+	<string>224865937450-b9murkt5ae9aksbv6r2jnch7mltb88v9.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.473353547063-t3m9rc8166cut0ddtk039gov9glc7i6a</string>
+	<string>com.googleusercontent.apps.224865937450-b9murkt5ae9aksbv6r2jnch7mltb88v9</string>
 	<key>API_KEY</key>
-	<string>AIzaSyD0DQbqz6lIkoOBiNDOyZ1QbLKpI5rw1OE</string>
+	<string>AIzaSyBJnxowfrlJoOcC8OpGcpnxvIYcNJf-SQQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>473353547063</string>
+	<string>224865937450</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.tanavsharma.AnimalSlotsGame</string>
 	<key>PROJECT_ID</key>
-	<string>animalslots-35161</string>
+	<string>animal-slot-game</string>
 	<key>STORAGE_BUCKET</key>
-	<string>animalslots-35161.appspot.com</string>
+	<string>animal-slot-game.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:473353547063:ios:768e0920cab27c370a3eb2</string>
+	<string>1:224865937450:ios:19ba36f258205158a63b53</string>
 </dict>
 </plist>
